--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <body ng-controller="ToDoController as todo">
 	<h1>AngularJS To-Do</h1>
 	<ul id="to-do-list">
-		<li ng-repeat="task in todo.tasks track by $index">{{task}}</li>
+		<li ng-repeat="task in todo.tasks track by $index">
+			{{ task }}
+			<button ng-click="todo.deleteTask($index)">Delete</button>
+		</li>
 	</ul>
 	<form ng-submit="todo.createTask()">
        <input type="text" ng-model="todo.taskName">
